--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -40,6 +40,7 @@ body{
 	background-color: $background;
 	font-family: $body-font;
 	font-size : $body-size;
+	line-height: 1.3em;
 	overflow-x: hidden;
 }
 
